--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active::after{
+    content: "";
+    position: absolute;
+    background-color: rgb(2, 132, 199);
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: -8px;
+    border-radius: 10px;
+}
